--- a/cdemo.vcxproj
+++ b/cdemo.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dict.c" />
     <ClCompile Include="hello.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="dict.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
