--- a/cdemo.vcxproj
+++ b/cdemo.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="dict.c" />
     <ClCompile Include="hello.c" />
+    <ClCompile Include="snake.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dict.h" />
+    <ClInclude Include="snake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
