--- a/cdemo.vcxproj.filters
+++ b/cdemo.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="dict.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="snake.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dict.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="snake.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
